feat: nodemon devDep. added

--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
         "@keystonejs/fields": "^17.0.0",
         "@keystonejs/keystone": "^14.0.0",
         "cross-env": "^7.0.0"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.4"
     }
 }
