--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,34 @@
+#deps
 node_modules
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# next.js
+client/.next/
+client/out/
+
+# production
+client/build
+
+# misc
+client/.DS_Store
+client/*.pem
+
+# debug
+client/npm-debug.log*
+client/yarn-debug.log*
+client/yarn-error.log*
+
+# local env files
+client/.env.local
+client/.env.development.local
+client/.env.test.local
+client/.env.production.local
+
+# vercel
+client/.vercel
