--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "node": ">=10.0.0"
     },
     "scripts": {
-        "dev": "cross-env NODE_ENV=development DISABLE_LOGGING=true nodemon --exec keystone dev",
+        "dev": "cross-env NODE_ENV=development DISABLE_LOGGING=true keystone dev",
         "build": "cross-env NODE_ENV=production keystone build",
         "start": "cross-env NODE_ENV=production keystone start",
         "create-tables": "cross-env keystone create-tables"
@@ -27,6 +27,7 @@
         "cross-env": "^7.0.0"
     },
     "devDependencies": {
-        "nodemon": "^2.0.4"
+        "nodemon": "^2.0.4",
+        "typescript": "^4.0.2"
     }
 }
