--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@keystonejs/app-static": "^5.1.2",
         "@keystonejs/fields": "^17.0.0",
         "@keystonejs/keystone": "^14.0.0",
+        "@apollo/client": "^3.1.4",
         "cross-env": "^7.0.0"
     },
     "devDependencies": {
