--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
         "create-tables": "cross-env keystone create-tables"
     },
     "dependencies": {
+        "@apollo/client": "^3.1.4",
         "@keystonejs/adapter-mongoose": "^9.0.3",
         "@keystonejs/app-admin-ui": "^7.3.2",
         "@keystonejs/app-graphql": "^6.1.0",
         "@keystonejs/app-next": "^5.2.1",
         "@keystonejs/app-static": "^5.1.2",
+        "@keystonejs/auth-password": "^5.1.14",
         "@keystonejs/fields": "^17.0.0",
         "@keystonejs/keystone": "^14.0.0",
-        "@apollo/client": "^3.1.4",
         "cross-env": "^7.0.0"
     },
     "devDependencies": {
