--- a/package.json
+++ b/package.json
@@ -1,35 +1,40 @@
 {
-    "name": "@keystonejs/example-projects-todo",
-    "description": "An example KeystoneJS project showcasing a simple Todo List with a Keystone StaticApp front-end.",
-    "private": true,
-    "version": "5.0.15",
-    "author": "The KeystoneJS Development Team",
-    "repository": "https://github.com/keystonejs/keystone/tree/master/packages/create-keystone-app/example-projects/todo",
-    "homepage": "https://github.com/keystonejs/keystone",
-    "license": "MIT",
-    "engines": {
-        "node": ">=10.0.0"
-    },
-    "scripts": {
-        "dev": "cross-env NODE_ENV=development DISABLE_LOGGING=true keystone dev",
-        "build": "cross-env NODE_ENV=production keystone build",
-        "start": "cross-env NODE_ENV=production keystone start",
-        "create-tables": "cross-env keystone create-tables"
-    },
-    "dependencies": {
-        "@apollo/client": "^3.1.4",
-        "@keystonejs/adapter-mongoose": "^9.0.3",
-        "@keystonejs/app-admin-ui": "^7.3.2",
-        "@keystonejs/app-graphql": "^6.1.0",
-        "@keystonejs/app-next": "^5.2.1",
-        "@keystonejs/app-static": "^5.1.2",
-        "@keystonejs/auth-password": "^5.1.14",
-        "@keystonejs/fields": "^17.0.0",
-        "@keystonejs/keystone": "^14.0.0",
-        "cross-env": "^7.0.0"
-    },
-    "devDependencies": {
-        "nodemon": "^2.0.4",
-        "typescript": "^4.0.2"
-    }
+  "name": "JuozasPortfolio",
+  "description": "portfolio.",
+  "private": true,
+  "version": "5.0.15",
+  "author": "The KeystoneJS Development Team",
+  "repository": "https://github.com/keystonejs/keystone/tree/master/packages/create-keystone-app/example-projects/todo",
+  "homepage": "https://github.com/keystonejs/keystone",
+  "license": "MIT",
+  "engines": {
+    "node": ">=10.0.0"
+  },
+  "scripts": {
+    "dev": "cross-env NODE_ENV=development DISABLE_LOGGING=true keystone dev",
+    "build": "cross-env NODE_ENV=production keystone build",
+    "start": "cross-env NODE_ENV=production keystone start",
+    "create-tables": "cross-env keystone create-tables"
+  },
+  "dependencies": {
+    "@apollo/client": "^3.1.4",
+    "@keystonejs/adapter-mongoose": "^9.0.3",
+    "@keystonejs/app-admin-ui": "^7.3.2",
+    "@keystonejs/app-graphql": "^6.1.0",
+    "@keystonejs/app-next": "^5.2.1",
+    "@keystonejs/app-static": "^5.1.2",
+    "@keystonejs/auth-password": "^5.1.14",
+    "@keystonejs/fields": "^17.0.0",
+    "@keystonejs/fields-content": "^8.0.1",
+    "@keystonejs/fields-markdown": "^5.2.5",
+    "@keystonejs/file-adapters": "^7.0.3",
+    "@keystonejs/keystone": "^14.0.0",
+    "@types/p5": "^0.9.1",
+    "cross-env": "^7.0.0",
+    "p5": "^1.1.9"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4",
+    "typescript": "^4.0.2"
+  }
 }
