--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "@keystonejs/file-adapters": "^7.0.3",
     "@keystonejs/keystone": "^14.0.0",
     "@types/p5": "^0.9.1",
+    "@types/styled-components": "^5.1.3",
     "cross-env": "^7.0.0",
-    "p5": "^1.1.9"
+    "p5": "^1.1.9",
+    "styled-components": "^5.1.1",
+    "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.4",
