--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -16,7 +16,8 @@
         "baseUrl": "./",
         "paths": {
             "@components/*": ["components/*"],
-            "@styles/*": ["styles/*"]
+            "@styles/*": ["styles/*"],
+            "@core/*": ["core/*"]
         }
     },
     "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
